--- a/AngularFormsWithAspMvc/index.html
+++ b/AngularFormsWithAspMvc/index.html
@@ -5,13 +5,16 @@
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/angular-route.min.js"></script>
     <script src="app/AngularFormsApp.js"></script>
     <script src="app/EmployeeForm/efController.js"></script>
     <script src="app/EmployeeForm/efDirective.js"></script>
     <script src="app/EmployeeForm/efService.js"></script>
 </head>
 <body ng-controller="efController" class="container">
-    <br />
-    <employee-form />
+    <h1>Start Page</h1>
+    <div ng-view>
+        
+    </div>
 </body>
 </html>
