--- a/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
+++ b/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
@@ -91,7 +91,7 @@
     </fieldset>
 
     <div class="col-sm-offset-3 col-sm-9">
-        <input type="submit" class="btn btn-primary" value="Submit" />
+        <input ng-click="submitForm()" type="submit" class="btn btn-primary" value="Submit" />
     </div>
 
 </form>
