--- a/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
+++ b/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
@@ -6,7 +6,7 @@
             <label for="fullName" class="col-sm-3 control-label">Name</label>
             <div class="col-sm-9">
                 <input type="text" id="fullName" name="fullName" class="form-control"
-                       ng-model="employee.fullName" />
+                       ng-model="editableEmployee.fullName" />
             </div>
         </div>
 
@@ -14,7 +14,7 @@
             <label for="notes" class="col-sm-3 control-label">Notes</label>
             <div class="col-sm-9">
                 <textarea name="notes" id="notes" class="form-control" rows="5" cols="40"
-                          ng-model="employee.notes"></textarea>
+                          ng-model="editableEmployee.notes"></textarea>
             </div>
         </div>
 
@@ -22,7 +22,7 @@
             <label for="department" class="col-sm-3 control-label">Department</label>
             <div class="col-sm-9">
                 <select name="department" id="department" class="form-control"
-                        ng-model="employee.department"
+                        ng-model="editableEmployee.department"
                         ng-options="x for x in departments"></select>
             </div>
         </div>
@@ -39,19 +39,19 @@
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" value="perkCar"
-                               ng-model="employee.perkCar" />Company Car
+                               ng-model="editableEmployee.perkCar" />Company Car
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" value="perkStock"
-                               ng-model="employee.perkStock" />Stock Options
+                               ng-model="editableEmployee.perkStock" />Stock Options
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" value="perkSixWeeks"
-                               ng-model="employee.perkSixWeeks" />Six Weeks Vacation
+                               ng-model="editableEmployee.perkSixWeeks" />Six Weeks Vacation
                     </label>
                 </div>
             </div>
@@ -69,19 +69,19 @@
                 <div class="radio">
                     <label>
                         <input type="radio" name="payrollType" value="w2"
-                               ng-model="employee.payrollType" /> W-2
+                               ng-model="editableEmployee.payrollType" /> W-2
                     </label><br />
                 </div>
                 <div class="radio">
                     <label>
                         <input type="radio" name="payrollType" value="ten99"
-                               ng-model="employee.payrollType" /> 1099
+                               ng-model="editableEmployee.payrollType" /> 1099
                     </label><br />
                 </div>
                 <div class="radio">
                     <label>
                         <input type="radio" name="payrollType" value="none"
-                               ng-model="employee.payrollType" /> None
+                               ng-model="editableEmployee.payrollType" /> None
                     </label><br />
                 </div>
                 <br />
@@ -91,6 +91,7 @@
     </fieldset>
 
     <div class="col-sm-offset-3 col-sm-9">
+        <input ng-click="cancelForm()" type="submit" class="btn btn-default" value="Cancel" />
         <input ng-click="submitForm()" type="submit" class="btn btn-primary" value="Submit" />
     </div>
 
