--- a/AngularFormsWithAspMvc/app/Home.html
+++ b/AngularFormsWithAspMvc/app/Home.html
@@ -1,2 +1,7 @@
 ﻿<input type="button" class="btn btn-primary" value="Добавить нового сторудника"
-       ng-click="addNewEmployee()" />
+       ng-click="showCreateEmployeeForm()" />
+
+<br />
+<br />
+<input type="button" class="btn btn-primary" value="Отредактировать Сотрудника Id: 123"
+       ng-click="showUpdateEmployeeForm(123)" />
