Добавил диалоговое окно - Проблема не Inject $modalInstance - пришлось через сам объект  $modal передавать окно

--- a/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
+++ b/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
@@ -1,98 +1,105 @@
-﻿<form class="form-horizontal" role="form">
-
-    <fieldset>
-        <legend>Basic Information</legend>
-        <div class="form-group">
-            <label for="fullName" class="col-sm-3 control-label">Name</label>
-            <div class="col-sm-9">
-                <input type="text" id="fullName" name="fullName" class="form-control"
-                       ng-model="editableEmployee.fullName" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="notes" class="col-sm-3 control-label">Notes</label>
-            <div class="col-sm-9">
-                <textarea name="notes" id="notes" class="form-control" rows="5" cols="40"
-                          ng-model="editableEmployee.notes"></textarea>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="department" class="col-sm-3 control-label">Department</label>
-            <div class="col-sm-9">
-                <select name="department" id="department" class="form-control"
-                        ng-model="editableEmployee.department"
-                        ng-options="x for x in departments"></select>
-            </div>
-        </div>
-    </fieldset>
-    <br />
-
-    <fieldset>
-        <legend>Perks</legend>
-        <div class="form-group">
-            <div class="col-sm-3">
-            </div>
-            <div class="col-sm-9">
-
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="perkCar"
-                               ng-model="editableEmployee.perkCar" />Company Car
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="perkStock"
-                               ng-model="editableEmployee.perkStock" />Stock Options
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="perkSixWeeks"
-                               ng-model="editableEmployee.perkSixWeeks" />Six Weeks Vacation
-                    </label>
+﻿<div ng-controller="efController">
+    <div class="modeal-header">
+        <h1>Новый сотрудник</h1>
+    </div>
+    <div class="modal-body">
+        <fieldset>
+            <legend>Basic Information</legend>
+            <div class="form-group">
+                <label for="fullName" class="col-sm-3 control-label">Name</label>
+                <div class="col-sm-9">
+                    <input type="text" id="fullName" name="fullName" class="form-control"
+                           ng-model="editableEmployee.fullName" />
                 </div>
             </div>
-        </div>
-    </fieldset>
-    <br />
 
-    <fieldset>
-        <legend>Payroll Type</legend>
-        <div class="form-group">
-            <div class="col-sm-3">
+            <div class="form-group">
+                <label for="notes" class="col-sm-3 control-label">Notes</label>
+                <div class="col-sm-9">
+                    <textarea name="notes" id="notes" class="form-control" rows="5" cols="40"
+                              ng-model="editableEmployee.notes"></textarea>
+                </div>
             </div>
-            <div class="col-sm-9">
 
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="payrollType" value="w2"
-                               ng-model="editableEmployee.payrollType" /> W-2
-                    </label><br />
+            <div class="form-group">
+                <label for="department" class="col-sm-3 control-label">Department</label>
+                <div class="col-sm-9">
+                    <select name="department" id="department" class="form-control"
+                            ng-model="editableEmployee.department"
+                            ng-options="x for x in departments"></select>
                 </div>
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="payrollType" value="ten99"
-                               ng-model="editableEmployee.payrollType" /> 1099
-                    </label><br />
-                </div>
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="payrollType" value="none"
-                               ng-model="editableEmployee.payrollType" /> None
-                    </label><br />
-                </div>
-                <br />
-
             </div>
-        </div>
-    </fieldset>
+        </fieldset>
+        <br />
 
-    <div class="col-sm-offset-3 col-sm-9">
-        <input ng-click="cancelForm()" type="submit" class="btn btn-default" value="Cancel" />
-        <input ng-click="submitForm()" type="submit" class="btn btn-primary" value="Submit" />
+        <fieldset>
+            <legend>Perks</legend>
+            <div class="form-group">
+                <div class="col-sm-3">
+                </div>
+                <div class="col-sm-9">
+
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" value="perkCar"
+                                   ng-model="editableEmployee.perkCar" />Company Car
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" value="perkStock"
+                                   ng-model="editableEmployee.perkStock" />Stock Options
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" value="perkSixWeeks"
+                                   ng-model="editableEmployee.perkSixWeeks" />Six Weeks Vacation
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+        <br />
+
+        <fieldset>
+            <legend>Payroll Type</legend>
+            <div class="form-group">
+                <div class="col-sm-3">
+                </div>
+                <div class="col-sm-9">
+
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="payrollType" value="w2"
+                                   ng-model="editableEmployee.payrollType" /> W-2
+                        </label><br />
+                    </div>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="payrollType" value="ten99"
+                                   ng-model="editableEmployee.payrollType" /> 1099
+                        </label><br />
+                    </div>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="payrollType" value="none"
+                                   ng-model="editableEmployee.payrollType" /> None
+                        </label><br />
+                    </div>
+                    <br />
+
+                </div>
+            </div>
+        </fieldset>
     </div>
 
-</form>
+    <div class="modal-footer">
+
+        <div class="col-sm-offset-3 col-sm-9">
+            <input ng-click="cancelForm()" type="submit" class="btn btn-default" value="Cancel" />
+            <input ng-click="submitForm()" type="submit" class="btn btn-primary" value="Submit" />
+        </div>
+
+    </div>
+</div>
