--- a/AngularFormsWithAspMvc/index.html
+++ b/AngularFormsWithAspMvc/index.html
@@ -6,10 +6,13 @@
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.min.js"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
     <script src="app/AngularFormsApp.js"></script>
+    <script src="app/DataService.js"></script>
+
     <script src="app/EmployeeForm/efController.js"></script>
     <script src="app/EmployeeForm/efDirective.js"></script>
-    <script src="app/DataService.js"></script>
+
 </head>
 <body ng-controller="efController" class="container">
     <h1>Start Page</h1>
