Добавил календари и авто-заполнение

--- a/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
+++ b/AngularFormsWithAspMvc/app/EmployeeForm/efTemplate.html
@@ -29,6 +29,35 @@
                             ng-options="x for x in departments"></select>
                 </div>
             </div>
+
+            <div class="form-group">
+                <label for="dateHired" class="col-sm-3 control-label">Date Hired</label>
+                <div class="col-sm-9">
+                    <datepicker name="dateHired" ng-model="editableEmployee.dateHired">
+                    </datepicker>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="breakTime" class="col-sm-3 control-label">Break Time</label>
+                <div class="col-sm-9">
+                    <timepicker name="breakTime" ng-model="editableEmployee.breakTime">
+                    </timepicker>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="topProgrammingLanguage" class="col-sm-3 control-label">
+                    Top Programming Language
+                </label>
+                <div class="col-sm-9">
+                    <input type="text" id="topProgrammingLanguage" name="topProgrammingLanguage"
+                           class="form-control"
+                           ng-model="editableEmployee.topProgrammingLanguage"
+                           typeahead="language for language in programmingLanguages | filter:$viewValue" />
+                </div>
+            </div>
+
         </fieldset>
         <br />
 
